fix code blocks not scrolling on mobile

--- a/assets/next_main.css
+++ b/assets/next_main.css
@@ -67,6 +67,6 @@ body>footer {
 
 .highlight pre {
     padding: 1em;
-    overflow: hidden;
+    overflow: scroll;
     border-radius: 0.5em;
 }
